@@ -197,6 +197,7 @@ typedef ret (APIENTRY *func##_f) params; \
 __GL_FUNC_EXTERN func##_f func##_fp;
 #endif
 
+GL_FUNCTION_OPT(void, glColorTableEXT, (int, int, int, int, int, const void *))
 GL_FUNCTION_OPT(void, glGetTexParameterfv, (GLenum,GLenum,GLfloat *))
 GL_FUNCTION_OPT(void, glActiveTextureARB, (GLenum))
 GL_FUNCTION_OPT(void, glMultiTexCoord2fARB, (GLenum,GLfloat,GLfloat))
